--- a/filas.html
+++ b/filas.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>columnas</title>
+    <title>displays</title>
     <style>
         body {
             font-family: Arial, Helvetica, sans-serif;
@@ -14,7 +14,7 @@
             display: grid;
             /*grid-template-columns: 200px 200px 200px;
             grid-template-rows: 300px 300px;*/
-            grid-template: 300px 300px/ 200px 200px 200px;
+            grid-template: 300px 200px/ 200px 200px 200px;
         }
         
         .item {
@@ -22,7 +22,14 @@
             padding: 10px;
             border: 1px solid red;
         }
+        
+        .item:nth-of-type(4) {
+            background: chartreuse;
+            overflow: auto;
+            /*display: subgrid;*/
+        }
     </style>
+
 </head>
 
 <body>
@@ -30,7 +37,15 @@
         <div class="item">contenido #1</div>
         <div class="item">contenido #2</div>
         <div class="item">contenido #3</div>
-        <div class="item">contenido #4</div>
+        <div class="item">
+            <div class="item">sub-contenido #1</div>
+            <div class="item">sub-contenido #2</div>
+            <div class="item">sub-contenido #3</div>
+            <div class="item">sub-contenido #4</div>
+            <div class="item">sub-contenido #4</div>
+
+
+        </div>
         <div class="item">contenido #5</div>
         <div class="item">contenido #6</div>
         <div class="item">contenido #7</div>
