--- a/filas.html
+++ b/filas.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>displays</title>
+    <title>Gap</title>
     <style>
         body {
             font-family: Arial, Helvetica, sans-serif;
@@ -14,7 +14,9 @@
             display: grid;
             /*grid-template-columns: 200px 200px 200px;
             grid-template-rows: 300px 300px;*/
-            grid-template: 300px 200px/ 200px 200px 200px;
+            grid-template: 300px 100px 100px/ 50% 200px 100px;
+            grid-column-gap: 30px;
+            grid-row-gap: 50px;
         }
         
         .item {
@@ -27,6 +29,8 @@
             background: chartreuse;
             overflow: auto;
             /*display: subgrid;*/
+            display: grid;
+            grid-template: 300px 100px 100px/ 50% 200px 100px;
         }
     </style>
 
